// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage Debe de mostrar el componente correctamente con la Imagen personalizado 1`] = `
<img
  alt="Product Img"
  className="productImg undefined"
  src="http://hola.jpg"
/>
`;

exports[`ProductImage Debe de mostrar el componente correctamentecon la Imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product Img"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
